--- a/index.html
+++ b/index.html
@@ -114,8 +114,24 @@
         </div>
 
         <div class="portfolio-item">
-            <img src="img\demons.jpg"> 
-            <p></p>
+            <img src="img\quotes.jpg"> 
+            <p>A random generator of Dostoevsky's quotes</p>
+            <a href="https://podvalniypiero.github.io/quotes_dostoevsky/" target="_blank">
+                <button>Watch website</button>
+            </a>
+        </div>
+
+        <div class="portfolio-item">
+            <img src="img\quotes.jpg"> 
+            <p>Meditation application</p>
+            <a href="" target="_blank">
+                <button>Watch website</button>
+            </a>
+        </div>
+
+        <div class="portfolio-item">
+            <img src="img\quotes.jpg"> 
+            <p>To-Do application</p>
             <a href="" target="_blank">
                 <button>Watch website</button>
             </a>
