--- a/index.html
+++ b/index.html
@@ -82,6 +82,31 @@
         <p class="portfolio-h nav">Portfolio</p>
 
         <div class="portfolio-item">
+            <img src="img\meditation.png"> 
+            <p>Meditation application</p>
+            <a href="https://podvalniypiero.github.io/jsMeditationApp/" target="_blank">
+                <button>Watch website</button>
+            </a>
+        </div>
+
+        <div class="portfolio-item">
+            <img src="img\weather.png"> 
+            <p>Weather API</p>
+            <a href="https://podvalniypiero.github.io/jsWeatherAPI/" target="_blank">
+                <button>Watch website</button>
+            </a>
+        </div>
+
+        <div class="portfolio-item">
+            <img src="img\bakery.png"> 
+            <p>La Croissant</p>
+            <a href="https://podvalniypiero.github.io/croissant/" target="_blank">
+                <button>Watch website</button>
+            </a>
+        </div>
+
+
+        <div class="portfolio-item">
             <img src="img\demons.jpg"> 
             <p>Demons by Dostoevsky - play fortune application</p>
             <a href="https://podvalniypiero.github.io/demonsPlayFortune/" target="_blank">
@@ -89,8 +114,29 @@
             </a>
         </div>
 
+
+
         <div class="portfolio-item">
-            <img src="img\demons.jpg"> 
+            <img src="img\quote.png"> 
+            <p>A random generator of Dostoevsky's quotes</p>
+            <a href="https://podvalniypiero.github.io/quotes_dostoevsky/" target="_blank">
+                <button>Watch website</button>
+            </a>
+        </div>
+
+        
+        <div class="portfolio-item">
+            <img src="img\planner.png"> 
+            <p>To-Do application</p>
+            <a href="https://podvalniypiero.github.io/jsToDoApp/" target="_blank">
+                <button>Watch website</button>
+            </a>
+        </div>
+
+       
+
+        <div class="portfolio-item">
+            <img src="img\tarot.png"> 
             <p>Taro Cards - promo site</p>
             <a href="https://podvalniypiero.github.io/taroCards/" target="_blank">
                 <button>Watch website</button>
@@ -98,41 +144,9 @@
         </div>
 
         <div class="portfolio-item">
-            <img src="img\demons.jpg"> 
+            <img src="img\vg.png"> 
             <p>Van Gogh as the Father of a Modern Art - promo site</p>
             <a href="https://podvalniypiero.github.io/vangogh/" target="_blank">
-                <button>Watch website</button>
-            </a>
-        </div>
-
-        <div class="portfolio-item">
-            <img src="img\demons.jpg"> 
-            <p>La Croissant</p>
-            <a href="https://podvalniypiero.github.io/croissant/" target="_blank">
-                <button>Watch website</button>
-            </a>
-        </div>
-
-        <div class="portfolio-item">
-            <img src="img\quotes.jpg"> 
-            <p>A random generator of Dostoevsky's quotes</p>
-            <a href="https://podvalniypiero.github.io/quotes_dostoevsky/" target="_blank">
-                <button>Watch website</button>
-            </a>
-        </div>
-
-        <div class="portfolio-item">
-            <img src="img\quotes.jpg"> 
-            <p>Meditation application</p>
-            <a href="" target="_blank">
-                <button>Watch website</button>
-            </a>
-        </div>
-
-        <div class="portfolio-item">
-            <img src="img\quotes.jpg"> 
-            <p>To-Do application</p>
-            <a href="" target="_blank">
                 <button>Watch website</button>
             </a>
         </div>
