--- a/index.html
+++ b/index.html
@@ -43,6 +43,55 @@
         <img class="photo-img" src="img\photoMe.png">
     </div>
 
+    <!-- <div id="bubbles">
+        <div class="boxes g"></div>
+        <div class="boxes b"></div>
+        <div class="boxes g"></div>
+        <div class="boxes b"></div>
+        <div class="boxes g"></div>
+        <div class="boxes b"></div>
+        <div class="boxes g"></div>
+        <div class="boxes b"></div>
+        <div class="boxes g"></div>
+        <div class="boxes b"></div>
+        <div class="boxes g"></div>
+        <div class="boxes b"></div>
+        <div class="boxes g"></div>
+        <div class="boxes b"></div>
+        <div class="boxes g"></div>
+        <div class="boxes b"></div>
+        <div class="boxes g"></div>
+        <div class="boxes b"></div>
+        <div class="boxes g"></div>
+        <div class="boxes b"></div>
+        <div class="boxes g"></div>
+        <div class="boxes b"></div>
+        <div class="boxes g"></div>
+        <div class="boxes b"></div>
+        <div class="boxes g"></div>
+        <div class="boxes b"></div>
+        <div class="boxes g"></div>
+        <div class="boxes b"></div>
+        <div class="boxes g"></div>
+        <div class="boxes b"></div>
+        <div class="boxes g"></div>
+        <div class="boxes b"></div>
+        <div class="boxes g"></div>
+        <div class="boxes b"></div>
+        <div class="boxes g"></div>
+        <div class="boxes b"></div>
+        <div class="boxes g"></div>
+        <div class="boxes b"></div>
+        <div class="boxes g"></div>
+        <div class="boxes b"></div>
+        <div class="boxes g"></div>
+        <div class="boxes b"></div>
+        <div class="boxes g"></div>
+        <div class="boxes b"></div>
+        <div class="boxes g"></div>
+        <div class="boxes b"></div>
+    </div> -->
+
     <div id="aboutMe">
         <p class="aboutMe-h nav">About me</p>
         <p class="aboutMe-par">Hi, I'm Maria - web developer from Moscow. 
