--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     <header>
         <ul class="header">
             <li class="header-home">Home</li>
-            <li>About me</li>
-            <li>Skills</li>
-            <li>Portfolio</li>
-            <li class="header-contacts">Contacts</li>
+            <a href="#aboutMeArticle"><li>About me</li></a>
+            <a href="#skillsArticle"><li>Skills</li></a>
+            <a href="#portfolioArticle"><li>Portfolio</li></a>
+            <a href="#contactsArticle"><li class="header-contacts">Contacts</li></a>
         </ul>
         <hr>
     </header>
@@ -44,6 +44,7 @@
     </div>
 
     <div id="aboutMe">
+        <article id="aboutMeArticle"></article>
         <p class="aboutMe-h nav">About me</p>
         <p class="aboutMe-par">Hi, I'm Maria - web developer from Moscow. 
             I'm interested in web development and everything connected with it.
@@ -55,6 +56,7 @@
 
     </div>
     <div id="skills">
+        <article id="skillsArticle"></article>
         <p class="skills-h nav">Skills</p>
         <p class="skills-par">I work with the help of</p>
         <div class="skills-list">
@@ -93,6 +95,7 @@
     </div>
 
     <div id="portfolio">
+        <article id="portfolioArticle"></article>
         <p class="portfolio-h nav">Portfolio</p>
 
         <div class="portfolio-item">
@@ -163,7 +166,9 @@
         
     </div>
 
+    
     <div id="contacts">
+        <article id="contactsArticle"></article>
         <p class="contacts-h nav">Contacts</p>
         <p class="contacts-par">Want to know more or have any suggestions? 
             <br><br>
