--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <ul class="header">
-            <li class="header-home">Home</li>
+            <a href="#"><li class="header-home">Home</li></a>
             <a href="#aboutMeArticle"><li>About me</li></a>
             <a href="#skillsArticle"><li>Skills</li></a>
             <a href="#portfolioArticle"><li>Portfolio</li></a>
