almost done eng

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
             </ul>
             
             <p class="skills-list-more">Currently studying React.JS and TypeScript! </p>
+            <div class="uni">
             <p class="skills-list-more">I also have an experience with </p>
             <ul class="list-more">
                 <li><img class="cplus" src="img\cplus.png"></li>
@@ -91,6 +92,7 @@
                 <li>Magic Plot</li>
                 <li>Common Lisp</li>
             </ul>
+        </div>
         </div>
     </div>
 
