--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
             <br>based in Moscow,
             <br>21 years old</p>
 
-        <p class="lang"><span>RU</span> | ENG </p>
+        
+        <p class="lang"><a href="indexRu.html"><span>RU</span></a><a href="#"> | ENG </a></p>
     </div>
     <div class="photo">
         <div class="photo-background"></div>
