--- a/indexRu.html
+++ b/indexRu.html
@@ -36,7 +36,7 @@
             <br>проживаю в Москве,
             <br>мне 21 год</p>
 
-        <p class="lang"><span>RU</span> | ENG </p>
+            <p class="lang"><a href="#"><span>RU</span></a><a href="index.html"> | ENG </a></p>
     </div>
     <div class="photo">
         <div class="photo-background"></div>
