--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <br>21 years old</p>
 
         
-        <p class="lang"><a href="indexRu.html"><span>RU</span></a><a href="#"> | ENG </a></p>
+        <p class="lang"><a href="indexRu.html">RU</a><a href="#"><span> | ENG</span> </a></p>
     </div>
     <div class="photo">
         <div class="photo-background"></div>
